# serials-box

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
blog/: admin.py  forms.py  models.py  permissions.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_content.py  0003_article_likes.py
blog/templatetags/: blog_tags.py
blog/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
config/: settings.py  urls.py  views.py
nginx/: default.conf
serials/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
serials/migrations/: 0001_initial.py  0002_auto_20211030_1452.py  0003_alter_crew_slug.py  0004_auto_20211103_1521.py  0005_favorite.py  0006_delete_favorite.py  0007_tvseries_favorite.py
serials/templatetags/: serials_tags.py
serials/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
templates/: base.html
templates/blog/: add_article.html  article.html  blog.html  delete_article.html  update_article.html
templates/flatpages/: about.html
templates/includes/: footer.html  header.html  paginator.html
templates/misc/: 404.html  500.html
templates/serials/: categories.html  category.html  crew_detail.html  index.html  series_detail.html
templates/users/: contact.html  edit_profile.html  edit_user.html  favorite.html  liked_articles.html  login.html  register.html  user_profile.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  (+2 more)
(+11 files in other folders)
